tests/invalid/invalid-005.inox
Module Invalid005

Main() :
    PutLn(Ord("ABC"))
;
